--- a/Docker-compose.yaml
+++ b/Docker-compose.yaml
@@ -1,23 +1,71 @@
+version: '3.8'
+
 services:
-  frontend:
-    image: node:18
-    volumes: ./frontend
-    ports: 5173:5173
-    depends_on: [backend]
+  postgres:
+    image: postgres:14
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - app-network
+
+  # pgadmin:
+  #   image: dpage/pgadmin4
+  #   ports:
+  #     - "8080:80"
+  #   environment:
+  #     PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL}
+  #     PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
+  #   depends_on:
+  #     - postgres
+  #   networks:
+  #     - app-network
 
   backend:
-    image: node:18
-    volumes: ./backend
-    ports: 3000:3000
-    environment:
-      - DB_URL=postgres://...
-
-  postgres:
-    image: postgres:15
-    ports: 5432:5432
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - ./backend:/app
+      - /app/node_modules
+    environment:
+      - NODE_ENV=development
+      - DB_HOST=postgres
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_NAME=${DB_NAME}
+      - JWT_SECRET=${JWT_SECRET}
+    depends_on:
+      - postgres
+    networks:
+      - app-network
 
-  adminer:
-    image: adminer
-    ports: 8080:8080
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    environment:
+      - REACT_APP_API_URL=http://localhost:3000/api
+    depends_on:
+      - backend
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
+
+volumes:
+  postgres_data:
