--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,7 @@
 # Configuration du serveur
 PORT=3000
 NODE_ENV=development
+DEBUG=gardien:*
 
 # Configuration de la base de données
 DB_HOST=localhost
