--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "backend",
 	"version": "1.0.0",
-	"main": "server.js",
+	"main": "app.js",
 	"scripts": {
-		"debug": "DEBUG=gardien:* node src/server.js",
+		"debug": "DEBUG=gardien:* node src/app.js",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node src/server.js",
-		"dev": "nodemon src/server.js",
+		"start": "node src/app.js",
+		"dev": "nodemon src/app.js",
 		"migrate": "sequelize-cli db:migrate",
 		"seed": "sequelize-cli db:seed:all"
 	},
@@ -15,6 +15,7 @@
 	"license": "ISC",
 	"description": "",
 	"dependencies": {
+		"axios": "^1.9.0",
 		"bcrypt": "^6.0.0",
 		"bcryptjs": "^3.0.2",
 		"cors": "^2.8.5",
@@ -26,6 +27,7 @@
 		"joi": "^17.13.3",
 		"jsonwebtoken": "^9.0.2",
 		"morgan": "^1.10.0",
+		"node-cron": "^4.0.5",
 		"nodemon": "^3.1.10",
 		"pg": "^8.15.6",
 		"pg-hstore": "^2.3.4",
