--- a/backend/package.json
+++ b/backend/package.json
@@ -32,9 +32,13 @@
 		"pg": "^8.15.6",
 		"pg-hstore": "^2.3.4",
 		"sanitize": "^2.1.2",
-		"sequelize": "^6.37.7"
+		"sequelize": "^6.37.7",
+		"swagger-jsdoc": "^6.2.8",
+		"swagger-ui-express": "^5.0.1"
 	},
 	"devDependencies": {
-		"sequelize-cli": "^6.6.3"
+		"jest": "^29.7.0",
+		"sequelize-cli": "^6.6.3",
+		"supertest": "^7.1.1"
 	}
 }
