animateur pointage ok semaine mois cumul history ok structure ok

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,18 @@
 	"version": "1.0.0",
 	"main": "app.js",
 	"scripts": {
-		"debug": "DEBUG=gardien:* node src/app.js",
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node src/app.js",
-		"dev": "nodemon src/app.js",
-		"migrate": "sequelize-cli db:migrate",
-		"seed": "sequelize-cli db:seed:all"
+    "debug": "DEBUG=gardien:* node src/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
+    "db:create": "sequelize-cli db:create",
+    "db:drop": "sequelize-cli db:drop",
+    "db:migrate": "sequelize-cli db:migrate",
+    "db:migrate:undo": "sequelize-cli db:migrate:undo",
+    "db:seed": "sequelize-cli db:seed:all",
+    "db:seed:undo": "sequelize-cli db:seed:undo:all",
+    "db:reset:full": "npm run db:drop && npm run db:create && npm run db:migrate && npm run db:seed",
+    "db:reset": "npm run db:migrate && npm run db:seed"
 	},
 	"keywords": [],
 	"author": "",
