--- a/Docker-compose.yaml
+++ b/Docker-compose.yaml
@@ -1,10 +1,10 @@
-version: '3.8'
+version: "3.8"
 
 services:
   postgres:
     image: postgres:14
-    ports:
-      - "5432:5432"
+    container_name: gardien_db_prod
+    restart: unless-stopped
     environment:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
@@ -51,8 +51,10 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+    container_name: gardien_frontend_prod
+    restart: unless-stopped
     ports:
-      - "8000:8000"
+      - "80:3001" # Port 80 pour production
     volumes:
       - ./frontend:/app
       - /app/node_modules
