Ajout CGU Mentions Legales RGPD RGAA Cookies

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,6 +16,9 @@ DB_POOL_MIN=0
 DB_POOL_ACQUIRE=30000
 DB_POOL_IDLE=10000
 
+PGADMIN_EMAIL=admin@guardiantime.com
+PGADMIN_PASSWORD=AdminPassword123!
+
 # Configuration JWT
-JWT_SECRET=votre_secret_jwt_tres_long_et_complexe
+JWT_SECRET=votre_secret_jwt_tres_long_et_complexe123!
 JWT_EXPIRES_IN=24h
