--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,50 +2,48 @@ version: "3.8"
 
 services:
   postgres:
-    image: postgres:14
+    image: postgres:14-alpine
     container_name: gardien_db_prod
     restart: unless-stopped
     environment:
-      POSTGRES_USER: ${DB_USER}
+      POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - app-network
-
-  # pgadmin:
-  #   image: dpage/pgadmin4
-  #   ports:
-  #     - "8080:80"
-  #   environment:
-  #     PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL}
-  #     PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
-  #   depends_on:
-  #     - postgres
-  #   networks:
-  #     - app-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USERNAME}"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    container_name: gardien_backend_prod
+    restart: unless-stopped
     ports:
       - "3000:3000"
-    volumes:
-      - ./backend:/app
-      - /app/node_modules
     environment:
-      - NODE_ENV=development
+      - NODE_ENV=production
       - DB_HOST=postgres
-      - DB_USER=${DB_USER}
+      - DB_USERNAME=${DB_USERNAME}
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_NAME=${DB_NAME}
       - JWT_SECRET=${JWT_SECRET}
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     networks:
       - app-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/api/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   frontend:
     build:
@@ -54,10 +52,7 @@ services:
     container_name: gardien_frontend_prod
     restart: unless-stopped
     ports:
-      - "80:3001" # Port 80 pour production
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
+      - "80:80"
     environment:
       - REACT_APP_API_URL=http://localhost:3000/api
     depends_on:
